[package]
name = "wyrtap"
version = "0.1.0"
authors = ["linde_5"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
libpulse-binding = "*"
libpulse-simple-binding = "*"
openssl = "*"
openssl-sys = "*"
rand = "*"
rust-crypto = "*"
rust-lzma = "*"
termion = "*"
whoami = "*"